tests/semantic/pass/swapped_array_access.c
int foo(void) {
  int *intpr;
  4[intpr];
}
