tests/semantic/fail/same_function_different_argument_name.c
int foo(int i) {return i;}
int foo(int k) {return k;}

int main(void) {
  return 0;
}
